--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tv_total_qty"
-            android:text="Total Quantity "
+            android:text="Total  "
             android:textColor="@android:color/black"
             android:layout_marginBottom="16dp"
             android:textStyle="bold"/>
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tv_total_pay"
-            android:text="Total Pay "
+            android:text="Total All "
             android:textColor="@android:color/black"
             android:layout_marginBottom="16dp"
             android:textStyle="bold"/>
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btn_submit_order"
-            android:text="Submit Order"
+            android:text="Submit"
             android:textColor="@android:color/white"
             android:background="@color/colorPrimary"/>
     </LinearLayout>
