--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -5,15 +5,15 @@
         <item
             android:id="@+id/nav_category"
             android:icon="@drawable/ic_filter"
-            android:title="Kategori Product" />
+            android:title="Kategori Event" />
         <item
             android:id="@+id/nav_history"
             android:icon="@drawable/ic_history"
-            android:title="Riwayat Pemesanan" />
+            android:title="Chat" />
         <item
             android:id="@+id/nav_notification"
             android:icon="@drawable/ic_notifications"
-            android:title="Notification" />
+            android:title="Maps Direction" />
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_info"
