--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:scaleType="fitXY"
-            android:src="@drawable/rocket"
+            android:src="@mipmap/rocket"
             android:layout_gravity="center"
             android:layout_marginBottom="16dp"/>
         <EditText
@@ -76,7 +76,7 @@
             android:id="@+id/tv_register"
             android:gravity="center"
             android:layout_marginTop="16dp"
-            android:text="Belum punya akun? Register"/>
+            android:text="Develop by Commu"/>
     </LinearLayout>
 </ScrollView>
 
