--- a/app/src/main/res/menu/menu_chat.xml
+++ b/app/src/main/res/menu/menu_chat.xml
@@ -18,4 +18,9 @@
         android:id="@+id/sendLocation"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/invite_menu"
+        android:title="@string/invite_menu_label"
+        app:showAsAction="never"/>
+
 </menu>
