--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -27,11 +27,12 @@
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_height="40dp"
             android:text="SUBMIT"
             android:id="@+id/btnFindPath"
             android:elevation="12dp"
-            android:backgroundTint="@color/colorPrimaryDark"
+            android:background="@color/colorPrimaryDark"
             android:textColor="@color/colorWhite" />
 
         <ImageView
