--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -18,7 +18,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
         android:fontFamily="sans-serif-condensed"
-        android:text="Alpha Ver 1.0"
+        android:text="Beta Ver 2.0"
         android:textColor="@color/colorWhite"
         android:textSize="18sp" />
 
