--- a/app/src/main/res/layout/toolbar_cart.xml
+++ b/app/src/main/res/layout/toolbar_cart.xml
@@ -31,9 +31,9 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="16dp">
                 <ImageView
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:src="@drawable/places_ic_search"
+                    android:layout_width="33dp"
+                    android:layout_height="33dp"
+                    android:src="@drawable/user"
                     android:id="@+id/img_cart"/>
                 <TextView
                     android:id="@+id/tv_cart"
