--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -22,7 +22,11 @@
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_info"
-            android:title="About Us" />
+            android:title="Event Terdekat" />
+        <item
+            android:id="@+id/nav_bantuan"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Bantuan" />
     </group>
 
     <item android:title="">
